[lworld] C2: assert(gvn().type(n)->is_zero_type()) failed: Should have been scalarized

XMLWordPrintable

      The attached test fails with the following assertion. This was found while working on JDK-8321734 and seems to be unrelated.

      To reproduce:
      $ javac --enable-preview --source 22 --add-exports java.base/jdk.internal.value=ALL-UNNAMED --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED Test.java
      $ java --enable-preview --add-exports java.base/jdk.internal.value=ALL-UNNAMED --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED -XX:+EnableValhalla -XX:CompileOnly=Test*::test* -Xcomp Test

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/christian/valhalla/open/src/hotspot/share/opto/parse1.cpp:1780), pid=1967494, tid=1967508
      # assert(gvn().type(n)->is_zero_type()) failed: Should have been scalarized
      #
      # JRE version: Java(TM) SE Runtime Environment (22.0) (slowdebug build 22-lworld4ea-2024-04-11-0703418.christian...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 22-lworld4ea-2024-04-11-0703418.christian..., compiled mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x137fa46] Parse::merge_common(Parse::Block*, int)+0x482
      .........
      Command Line: --enable-preview --add-exports=java.base/jdk.internal.value=ALL-UNNAMED --add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED -XX:+EnableValhalla -XX:CompileOnly=Test*::test* -Xcomp Test
      .........
      Current CompileTask:
      C2:994 67 b 4 Test::test (22 bytes)

      Stack: [0x000075f0bc15e000,0x000075f0bc25e000], sp=0x000075f0bc25a520, free space=1009k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x137fa46] Parse::merge_common(Parse::Block*, int)+0x482 (parse1.cpp:1780)
      V [libjvm.so+0x137f2e2] Parse::merge(int)+0xcc (parse1.cpp:1703)
      V [libjvm.so+0x1395bd3] Parse::do_one_bytecode()+0x3bb3 (parse2.cpp:3388)
      V [libjvm.so+0x137efe0] Parse::do_one_block()+0x55e (parse1.cpp:1654)
      V [libjvm.so+0x137a7b7] Parse::do_all_blocks()+0x3e5 (parse1.cpp:742)
      V [libjvm.so+0x137a2ca] Parse::Parse(JVMState*, ciMethod*, float)+0x14c4 (parse1.cpp:646)
      V [libjvm.so+0x825d49] ParseGenerator::generate(JVMState*)+0x117 (callGenerator.cpp:100)
      V [libjvm.so+0x96c2e0] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1136 (compile.cpp:799)
      V [libjvm.so+0x82254c] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea (c2compiler.cpp:135)
      V [libjvm.so+0x990f89] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa1f (compileBroker.cpp:2305)
      V [libjvm.so+0x98fa18] CompileBroker::compiler_thread_loop()+0x40e (compileBroker.cpp:1964)
      V [libjvm.so+0x9b3e2f] CompilerThread::thread_entry(JavaThread*, JavaThread*)+0x89 (compilerThread.cpp:68)
      V [libjvm.so+0xe25e9c] JavaThread::thread_main_inner()+0x168 (javaThread.cpp:721)
      V [libjvm.so+0xe25d31] JavaThread::run()+0x1d7 (javaThread.cpp:706)
      V [libjvm.so+0x15baf0f] Thread::call_run()+0x1b9 (thread.cpp:220)
      V [libjvm.so+0x133922c] thread_native_entry(Thread*)+0x1cb (os_linux.cpp:787)

        1. Test.java
          0.6 kB
          Christian Hagedorn
        2. hs_err_pid1967494.log
          74 kB
          Christian Hagedorn

            Assignee:
            Christian Hagedorn
            Reporter:
            Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: