8330691: [lworld] C2: assert(gvn().type(n)->is_zero_type()) failed: Should have been scalarized